# BadGraphing-Calculator

./: CMakeLists.txt  build.bat
src/: graphic.c  main.c  mathbase.c  thread.c  vector.c  window.c
src/header/: WindowProc.h  bitmap.h  global.h  graphic.h  mathbase.h  thread.h  vector.h  window.h
